// Vitest Snapshot v1

exports[`FileInjector > processFile 'README.md' { cwd: 'fixtures/no-injections', …(1) } 1`] = `
[
  [
    "_out_/README.md",
    "# Without injections

This file does not have any injections.
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'README.md' { cwd: 'fixtures/no-injections', …(1) } 2`] = `
[
  {
    "target": "stderr",
    "text": "README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/code/README.md' {} 1`] = `
[
  [
    "fixtures/code/README.md",
    "# This is a sample README

## Import Code

It contains some code:

<!--- @@inject: code.ts --->

\`\`\`ts
export function sayHello(name: string): string {
    return \`Hello \${name}\`;
}
\`\`\`

<!--- @@inject-end: code.ts --->

## Import \`json\` as \`jsonc\`

<!--- @@inject-code: sample.json#lang=jsonc --->

\`\`\`jsonc
{
    \\"name\\": \\"Sample\\"
}
\`\`\`

<!--- @@inject-end: sample.json#lang=jsonc --->

## Import Markdown as Code

It is also possible to inject markdown:

<!--- @@inject-code: example.md --->

\`\`\`markdown
# Example

This is an example bit of markdown.

- first
- second
- third
\`\`\`

<!--- @@inject-end: example.md --->

## Import a section from a Markdown file

<!--- @@inject: chapters.md#Chapter 3: Directives --->

## Chapter 3: Directives

-   \`@@inject: <markdown_file.md>[#heading]\` and \`@@inject-start:  <markdown_file.md>[#heading]\` -- injects the contents of a markdown file.
    -   \`<markdown_file.md>\` -- the file to import
    -   \`heading\` -- optional heading to extract.
-   \`@@inject: <non-markdown-file>[#lang]\`, \`@@inject-start:  <non-markdown-file>[#lang]\`, and \`@@inject-code: <file>[#lang]\`
    -   \`<non-markdown-file>\`, \`<file>\` -- the file to import
    -   \`lang\` -- optional language to use for the code bock.

<!--- @@inject-end: chapters.md#Chapter 3: Directives --->

## Import from lines from GitHub

<img width=\\"711\\" alt=\\"image\\" src=\\"https://user-images.githubusercontent.com/3740137/210188786-28704fe3-cc2f-447c-97fc-d27715dabbdc.png\\">

\`\`\`
<!--- @@inject: https://github.com/streetsidesoftware/inject-markdown/blob/d7de2f5fe/src/app.mts#L15-L19 --->
\`\`\`

<!--- @@inject: https://github.com/streetsidesoftware/inject-markdown/blob/d7de2f5fe/src/app.mts#L15-L19 --->

\`\`\`typescript
async function version(): Promise<string> {
    const pathSelf = fileURLToPath(import.meta.url);
    const pathPackageJson = path.join(path.dirname(pathSelf), '../package.json');
    const packageJson = JSON.parse(await fs.readFile(pathPackageJson, 'utf8'));
    return (typeof packageJson === 'object' && packageJson?.version) || '0.0.0';
\`\`\`

<!--- @@inject-end: https://github.com/streetsidesoftware/inject-markdown/blob/d7de2f5fe/src/app.mts#L15-L19 --->

## GitHub Footnote

|        | version | Node | Support               | End-Of-Life |
| :----- | :------ | :--- | :-------------------- | :---------- |
| cspell | 6.x     | 14.x | In Active Development | TBD         |
| cspell | 5.x     | 12.x | Paid support only[^1] | 2022-10-01  |
| cspell | 4.x     | 10.x | Paid support only[^1] | 2022-05-01  |

[^1]: [Support - Street Side Software](https://streetsidesoftware.com/support/#maintenance-agreements)
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/code/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/code/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/headers/README.md' {} 1`] = `
[
  [
    "fixtures/headers/README.md",
    "# Injecting Headers

<!--- @@inject: content.md#Nested --->

### Nested

This is nested under Section 1

<!--- @@inject-end: content.md#Nested --->

<!--- @@inject: content.md#heading=Nested&L11-L99 --->

### Nested

This is nested under Section 3

<!--- @@inject-end: content.md#heading=Nested&L11-L99 --->

<!--- @@inject: content.md#Nested&L11-L99 --->

### Nested

This is nested under Section 3

<!--- @@inject-end: content.md#Nested&L11-L99 --->

<!--- @@inject: content.md#Missing --->

<!--- header: \\"Missing\\" not found.  --->

<!--- @@inject-end: content.md#Missing --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/headers/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/headers/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/quotes/README.md' {} 1`] = `
[
  [
    "fixtures/quotes/README.md",
    "# Block Quotes

It is possible to Block Quote injected content.

\`\`\`markdown
<!--- @@inject: include.md#heading=Section 2&quote --->
\`\`\`

<!--- @@inject: include.md#Section 2&quote --->

> ## Section 2
>
> This is section 2 and its content.
>
> -   One
> -   Two
> -   Three
>
> \`\`\`json
> { \\"debug\\": true }
> \`\`\`

<!--- @@inject-end: include.md#Section 2&quote --->

<!--- @@inject: include.md#Section 2&quote&code --->

> \`\`\`\`markdown
> ## Section 2
>
> This is section 2 and its content.
>
> *   One
> *   Two
> *   Three
>
> \`\`\`json
> { \\"debug\\": true }
> \`\`\`
> \`\`\`\`

<!--- @@inject-end: include.md#Section 2&quote&code --->

<!--- @@inject: include.md#L13-L18&quote --->

> This is section 2 and its content.
>
> -   One
> -   Two
> -   Three

<!--- @@inject-end: include.md#L13-L18&quote --->

<!--- @@inject: include.md#heading=Nested&L22-L31&quote --->

> ### Nested
>
> This is nested under Section 3

<!--- @@inject-end: include.md#heading=Nested&L22-L31&quote --->
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/quotes/README.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/quotes/README.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_' } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_' } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', silent: true } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', silent: true } 2`] = `[]`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', verbose: true } 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' { outputDir: '_out_', verbose: true } 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": "
  parts/destinations.md",
  },
  {
    "target": "stderr",
    "text": "
  parts/prices.md",
  },
  {
    "target": "stderr",
    "text": "
  parts/destinations.md#Amsterdam",
  },
  {
    "target": "stderr",
    "text": "
  parts/code.md",
  },
  {
    "target": "stderr",
    "text": "
  done.
",
  },
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' {} 1`] = `
[
  [
    "fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'fixtures/vacations/vacations.md' {} 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile 'vacations.md' { cwd: 'fixtures/vacations/', …(1) } 1`] = `
[
  [
    "_out_/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile 'vacations.md' { cwd: 'fixtures/vacations/', …(1) } 2`] = `
[
  {
    "target": "stderr",
    "text": "vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_' }) 1`] = `
[
  [
    "_out_/fixtures/vacations/vacations.md",
    "# Vacations

## Destinations

<!--- @@inject: parts/destinations.md --->

## Amsterdam

Amsterdam is full of beautiful canals.

## Orlando

There are many amusement parks in Orlando.

## New York City

It is a wonderful place to catch a show.

## San Francisco

Do not miss out on the Golden Gate Bridge.

<!--- @@inject-end: parts/destinations.md --->

-   Prices
    <!--- @@inject: parts/prices.md --->
    ## Data
    | Name             | City      | Cost   |
    | ---------------- | --------- | ------ |
    | Parade of Lights | Amsterdam | €100/p |
    | Disney World     | Orlando   | $200/p |
    <!--- @@inject-end: parts/prices.md --->

# Highlight Destination (Amsterdam)

<!--- @@inject: parts/destinations.md#Amsterdam --->

## Amsterdam

Amsterdam is full of beautiful canals.

<!--- @@inject-end: parts/destinations.md#Amsterdam --->

## Code

<!--- @@inject-start: parts/code.md --->

## Example

\`\`\`ts
import * as fs from 'fs/promises';
import * as path from 'path';
\`\`\`

<!--- @@inject-end: parts/code.md --->

<pre>
<!--- @@inject: parts/destinations.md -->
</pre>

\`\`\`markdown
<!--- @@inject: parts/destinations.md -->
\`\`\`
",
    "utf8",
  ],
]
`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_' }) 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_', dryRun: true }) 1`] = `[]`;

exports[`FileInjector > processFile('fixtures/vacations/vacations.md', { outputDir: '_out_', dryRun: true }) 2`] = `
[
  {
    "target": "stderr",
    "text": "fixtures/vacations/vacations.md ...",
  },
  {
    "target": "stderr",
    "text": " done.
",
  },
]
`;
